--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,5 @@
-hi
+<h1>welcome to user auth</h1>
+
+<li><a href="/register">Sign Up</a></li>
+<li><a href="/login">Sign In</a></li>
+<li><a href="/logout">Sign Out</a></li>
