--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -2,3 +2,6 @@
 
 <p>you found me!</p>
 <img src="https://miro.medium.com/fit/c/240/240/1*RRXSjAIy3BEnq7Zfu0MS0A.jpeg" alt="">
+<li><a href="/register">Sign Up</a></li>
+<li><a href="/login">Sign In</a></li>
+<li><a href="/logout">Sign Out</a></li>
